[package]
name = "mess-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mess-api-derive = { path = "derive", optional = true }
serde = "1.0.137"
bincode = "1.3.3"
derivative = "2.2.0"

[features]
derive = [
    "mess-api-derive"
]
exec-vm = []