[package]
name = "mess-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mess"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mess = { path = "../mess" }
clap = { version = "3.1.18", features = [ "derive" ] }