[package]
name = "mess-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mess-core = { path = "../mess-core" }
mess-vm-derive = { path = "derive" }

bincode = { version = "1.3.3" }
enum-primitive-derive = "0.2.2"
num-traits = { version = "0.2.14" }
rand = { version = "0.8.4" }
serde = { version = "1.0.136", features = ["derive"] }
